...

          LazyColumn(modifier = Modifier.fillMaxWidth()) {
            visibleTasks.forEach {
              item {
                ListItem(
                    modifier =
                        Modifier.testTag("TaskItem").clickable {
                          navActions.navigateTo(Destination.EditTask(it.uid))
                        },
                    headlineContent = { Text(it.title) },
                    supportingContent = { Text(it.category) },
                    trailingContent = {
                      Checkbox(
                          modifier = Modifier.testTag("TaskCheckbox"),
                          checked = it.isCompleted,
                          onCheckedChange = { checked ->
                            eventTaskViewModel.checkTask(it, checked)
                          },
                      )
                    },
...
