...
          }
        },
    )
  } else {
    // Search bar
    SearchBar(
        modifier = Modifier.testTag("searchBar").padding(horizontal = 5.dp),
        query = query,
        onQueryChange = onQueryChange,
        onSearch = onSearch,
        active = false,
        onActiveChange = {},
        placeholder = { Text(text = "Search $searchTitle") },
...
